finished all major game functionality

--- a/src/application/application.css
+++ b/src/application/application.css
@@ -2,3 +2,7 @@
 	-fx-background-color: #996633;
 	-fx-background-image: url('minecraft_cookie.png');
 }
+
+.Title {
+	-fx-background-color: #996633;
+}
